--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@ body{
     color: var(--Dark-gray);
     line-height: 1.55;
 }
+.project-modal-open{
+    overflow: hidden;
+}
 h1{
     color: var(--Black);
     font-weight: 700;
@@ -24,11 +27,18 @@ h1{
     line-height: 1.1;
     margin-top: -3%;
 }
+h2{
+    color: var(--Black);
+    font-weight: 700;
+    font-size: 1.15rem;
+    line-height: 1.1;
+}
 .container{
     display: flex;
     flex-direction: column;
     position: relative;
     align-items: center;
+    
 }
 header{
     display: flex;
@@ -121,6 +131,7 @@ header{
     margin-inline: auto;
     gap: 1.5rem;
     padding-bottom: 4rem;
+    
 }
 .box-one,
 .box-two,
@@ -303,7 +314,8 @@ header{
 .btn:hover{
     background: var(--Dark-cyan);
 }
-.box-three-card.out {
+.box-three-card.out,
+.modal-card.out {
     opacity: .45;
 }
 .box-three-card.out .btn{
@@ -323,10 +335,160 @@ header{
 .mobile-nav-wrapper.open .contrast-modal{
     display: block;
 }
+.project-modal-open .project-modal{
+    display: flex;
+}
+.project-modal{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    background: hsl(0, 0%, 0%, .4);
+    width: 100%;
+    z-index: 20;
+    display: none;
+    flex-direction: column;
+    padding: 3rem 0;
+    overflow-y: auto;
+}
+.modal-details{
+    background: white;
+    width: 90%;
+    max-width: 568px;
+    margin-inline: auto;
+    border-radius: 8px;
+    padding: 2rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    font-size: .9rem;
+    position: relative;
+    z-index: 10;
+}
+.modal-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-
-
-
+}
+.modal-form{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+.close-modal{
+    display: flex;
+    cursor: pointer;
+    background: none;
+    outline: none;
+    border: none;
+}
+.modal-card{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 1.75rem 0;
+    border: 1px solid hsl(180, 4%, 86%);
+    border-radius: 8px;
+}
+.modal-card.selected-card{
+    border: 2px solid var(--Moderate-cyan);
+}
+.modal-card.selected-card .bottom{
+    display: flex;
+   
+}
+.top{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-inline: 1.5rem;
+}
+.top .project-head{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+.bottom{
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: height 1s ease;
+}
+.pledge-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .75rem;
+}
+.pledge-buttons{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1.5rem;
+}
+.pledge-amount-wrapper{
+    display: flex;
+    padding:  .7rem 1.7rem;
+    border:1px solid hsl(0, 0%, 73%);
+    border-radius: 100px;
+    width: 100%;
+    align-items: center;
+    gap: .5rem;
+}
+hr{
+    outline: none;
+    border-top: 1px solid hsl(0, 0%, 88%);
+}
+.pledge-amount{
+    width: 100%;
+    font-size: 1rem;
+    background: none;
+    border: none;
+    outline: none;
+    font-family: inherit;
+    font-weight: 700;
+    color: var(--Black);
+}
+.pledge-amount::placeholder{
+    font-weight: 700;
+    font-size: 1rem;
+    color: var(--Black);
+}
+.pledge-amount-wrapper span {
+    color: hsl(0, 0%, 73%);
+    font-weight: 700;
+    font-size: 1rem;
+}
+.pledge-checkbox{
+    appearance: none;
+    -webkit-appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 1px solid hsl(0, 0%, 73%);
+    border-radius: 50%;
+    position: relative;
+}
+.pledge-checkbox::after{
+    content: "";
+    width: 55%;
+    height: 55%;
+    background: var(--Moderate-cyan);
+    position: absolute;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: none;
+}
+.pledge-checkbox:checked::after{
+    display: block;
+}
 
 
 
